<resources>
    <string name="cexd_app_name">Direct</string>
    <string name="cexd_buy_label">BUY</string>
    <string name="cexd_legal">© 2013–2019 CEX.IO Ltd (UK)\n\n24th Floor One Canada Square, Canary Wharf London E14 5AB, United Kingdom</string>
    <string name="cexd_refund_policy">Refund policy</string>
    <string name="cexd_terms_of_use">Terms of Use</string>
    <string name="cexd_questions">Have any questions? Contact our</string>
    <string name="cexd_support">24/7 support</string>
    <string name="cexd_get">Get %1s %2s</string>
    <string name="cexd_purchase">Purchase %1s for %2s</string>
    <string name="cexd_buy">Buy %1s %2s for %3s %4s</string>
    <string name="cexd_order_id">Order id: %1s</string>
    <string name="cexd_enter_amount">Enter amount</string>
    <string name="cexd_next">Next</string>
    <string name="cexd_try_again">Try again!</string>
    <string name="cexd_double_check">Please double-check your data and try again, or try a different card.</string>
    <string name="cexd_charged">If your card has been charged, your payment will be refunded.</string>
    <string name="cexd_sorry1">We are sorry, but we could not process your order</string>
    <string name="cexd_purchase_could_not_be_completed">Purchase could not be completed</string>
    <string name="cexd_sorry2">We are sorry, but we could not verify your purchase with data you provided</string>
    <string name="cexd_verification_error">Verification Error</string>
    <string name="cexd_not_charged">No money has been charged from your card</string>
    <string name="cexd_location_not_supported">Location Not Supported</string>
    <string name="cexd_sorry3">We are sorry, but we cannot process\ntransactions from your country at this time.\nWe aim for global coverage!</string>
    <string name="cexd_receive_emails">I agree to receive notification email</string>
    <string name="cexd_inform_me">Inform Me!</string>
    <string name="cexd_email_address">Email Address</string>
    <string name="cexd_email">Email</string>
    <string name="cexd_state">State</string>
    <string name="cexd_billing_state">Enter the state where you reside</string>
    <string name="cexd_cancel">Cancel</string>
    <string name="cexd_country">Country</string>
    <string name="cexd_billing_country">Country</string>
    <string name="cexd_order_completed">You have successfully completed your purchase.</string>
    <string name="cexd_code">Enter code from email</string>
    <string name="cexd_emailed_to">We have emailed a code to</string>
    <string name="cexd_take_pic_id">Take Picture of your ID</string>
    <string name="cexd_take_pic_licence">Take Picture of your driver license</string>
    <string name="cexd_take_pic_passport">Take Picture of your passport</string>
    <string name="cexd_save">Save</string>
    <string name="cexd_amount_template">%1s %2s</string>
    <string name="cexd_ok">OK</string>
    <string name="cexd_magic">We are performing some special magic and will be back soon</string>
    <string name="cexd_exit">Exit</string>
    <string name="cexd_bought">You bought</string>
    <string name="cexd_for">For</string>
    <string name="cexd_tx_id">TX ID</string>
    <string name="cexd_thank_you">Thank you for choosing our services!</string>
    <string name="cexd_buy_more_crypto">Buy more crypto</string>
    <string name="cexd_currency_icon">Currency icon</string>
    <string name="cexd_edit_your_email">Edit Your Email</string>
    <string name="cexd_email_icon">Email icon</string>
    <string name="cexd_cvv">CVV</string>
    <string name="cexd_cvv_desc">A 3-digit number in reverse italics on the back of your credit card</string>
    <string name="cexd_choose_currency">Choose Currency</string>
    <string name="cexd_choose_crypto">Choose Cryptocurrency</string>
    <string name="cexd_find_a_shot_to_upload">Find a Shot to Upload</string>
    <string name="cexd_gallery">Gallery</string>
    <string name="cexd_camera">Camera</string>
    <string name="cexd_send_crypto_to">Send Crypto To</string>
    <string name="cexd_wallet">%1s Wallet Address</string>
    <string name="cexd_verify_payment">Verify Payment</string>
    <string name="cexd_verify_payment_desc">Please check whether your personal information below is correct. We have obtained it by scanning your document. You can make corrections below if necessary.</string>
    <string name="cexd_please_fill_information">Please Fill Information</string>
    <string name="cexd_wallet_icon">Wallet icon</string>
    <string name="cexd_user_icon">User icon</string>
    <string name="cexd_show_cvv_info">Show CVV info</string>
    <string name="cexd_cvv_icon">CVV icon</string>
    <string name="cexd_exp_date">Expiry Date</string>
    <string name="cexd_card_number">Card Number</string>
    <string name="cexd_card_icon">Card icon</string>
    <string name="cexd_enter_your_payment_card">Enter Your Payment Card</string>
    <string name="cexd_upload_photo">Upload photo</string>
    <string name="cexd_choose_document_type">Choose Document Type</string>
    <string name="cexd_invalid_email">Please enter a valid email</string>
    <string name="cexd_invalid_wallet">Please enter valid wallet address</string>
    <string name="cexd_select_country">Please select country</string>
    <string name="cexd_select_state">Please select state</string>
    <string name="cexd_accept_terms">Please agree to ToS</string>
    <string name="cexd_invalid_card_number">Please enter valid card number</string>
    <string name="cexd_invalid_cvv">Please enter valid CVV</string>
    <string name="cexd_invalid_exp_date">Please enter expiry date</string>
    <string name="cexd_invalid_code">Please enter code</string>
    <string name="cexd_password_icon">Password icon</string>
    <string name="cexd_submit">Submit</string>
    <string name="cexd_edit_email">Edit Email</string>
    <string name="cexd_code_not_received">Code not received</string>
    <string name="cexd_confirm_your_email_address">Confirm Your Email Address</string>
    <string name="cexd_processing_your_order_done">Processing Your Order… Done!</string>
    <string name="cexd_we_are_processing_your_order">We are processing your order…</string>
    <string name="cexd_processing_done_icon">Processing done icon</string>
    <string name="cexd_visa_icon">Visa icon</string>
    <string name="cexd_mastercard_icon">Mastercard icon</string>
    <string name="cexd_pci_dss_icon">PCI DSS icon</string>
    <string name="cexd_cex_io_icon">CEX.IO icon</string>
    <string name="cexd_agree">I agree with</string>
    <string name="cexd_do_you_want_to_exit">Do you want to exit?</string>
    <string name="cexd_popular_placeholder">%1s %2s</string>
    <string name="cexd_order_id_label">Order ID</string>
    <string name="cexd_order_id_copied">Order ID copied</string>
    <string name="cexd_tx_label">Transaction ID</string>
    <string name="cexd_tx_id_copied">Transaction ID copied</string>
    <string name="cexd_email_updated">Email updated</string>
    <string name="cexd_check_mail">Check your e-mail for code</string>
    <string name="cexd_wrong_code">Wrong code</string>
    <string name="cexd_ssn">SSN</string>
    <string name="cexd_please_enter_amount">Please, enter an amount</string>
    <string name="cexd_min_amount">Minimal purchase is %s</string>
    <string name="cexd_max_amount">You can spend up to %s</string>
    <string name="cexd_min_sale">Minimal sale volume is %s</string>
    <string name="cexd_max_sale">Maximal sale volume is %s</string>
    <string name="cexd_choose_country">Choose Country</string>
    <string name="cexd_choose_state">Choose State</string>
    <string name="cexd_file_not_found">File not found</string>
    <string name="cexd_file_not_loaded">Could not load file</string>
    <string name="cexd_currency_is_selected">Currency is selected</string>
    <string name="cexd_identity_payment_data">Identity and Payment Data</string>
    <string name="cexd_city">City</string>
    <string name="cexd_phone_number">Phone Number</string>
    <string name="cexd_last_name">Last Name</string>
    <string name="cexd_first_name">First Name</string>
    <string name="cexd_zip">ZIP code</string>
    <string name="cexd_middle_name">Middle Name</string>
    <string name="cexd_dob">Date of Birth</string>
    <string name="cexd_residential_city">City</string>
    <string name="cexd_residential_street">Address</string>
    <string name="cexd_residential_country">Country</string>
    <string name="cexd_issued_by">Issued by</string>
    <string name="cexd_residential_apt">Apt./Suite</string>
    <string name="cexd_residential_postcode">Postcode</string>
    <string name="cexd_issue_date">Issue Date</string>
    <string name="cexd_invalid_city">Please enter a valid city</string>
    <string name="cexd_invalid_country">Please enter a valid country</string>
    <string name="cexd_invalid_phone">Please enter a valid phone number</string>
    <string name="cexd_invalid_dob">Please enter a valid date of birth</string>
    <string name="cexd_invalid_street">Please enter a valid street address</string>
    <string name="cexd_invalid_zip">Please enter a valid ZIP code</string>
    <string name="cexd_invalid_ssn">Please enter valid SSN</string>
    <string name="cexd_invalid_first_name">Please enter first name</string>
    <string name="cexd_invalid_last_name">Please enter last name</string>
    <string name="cexd_invalid_mid_name">Please enter middle name</string>
    <string name="cexd_invalid_mid_postcode">Please enter valid postcode</string>
    <string name="cexd_invalid_generic_field">Please fill in this field</string>
    <string name="cexd_no_email_apps">No e-mail apps found</string>
    <string name="cexd_docs_note">Make sure photo details are clear to read.\nMaximum file size is 15 Mb.</string>
    <string name="cexd_no_doc_type_selected">Please select document type</string>
    <string name="cexd_file_too_big">File size should be no more than 15 MB</string>
    <string name="cexd_front_side">Front Side</string>
    <string name="cexd_back_side">Back Side</string>
    <string name="cexd_file_unsupported">Unsupported file format</string>
    <string name="cexd_no_front">Document front side is missing</string>
    <string name="cexd_no_back">Document back side is missing</string>
    <string name="cexd_no_photo">Document is missing</string>
    <string name="cexd_no_selfie">Selfie is missing</string>
    <string name="cexd_wrong_format">Wrong file type</string>
    <string name="cexd_remaining">%1s</string>
    <string name="cexd_title_get">Get %1s %2s for %3s %4s</string>
    <string name="cexd_edit">Edit</string>
    <string name="cexd_open_qr_scanner">Open QR scanner</string>
    <string name="cexd_you_have_not_passed">You haven\'t passed verification</string>
    <string name="cexd_verification_rejected_reason">Unfortunately your order hasn\'t passed \nour verification process, \nso it was rejected.</string>
    <string name="cexd_service_offline">Service is experiencing technical difficulties</string>
    <string name="cexd_service_offline_desc">We expect this to be resolved shortly. Payment will be refunded, if your card has been charged.</string>
    <string name="cexd_error_icon">Error icon</string>
    <string name="cexd_refund_title">Your payment is refunded</string>
    <string name="cexd_refund_reason">Unfortunately, we cannot complete your purchase due to technical difficulties with crypto service.</string>
    <string name="cexd_refund_desc">Your payment is fully refunded, however processing may take up to 5 working days.\nWe are sorry for the inconvenience.</string>
    <string name="cexd_refund_details">Refund payment details:</string>
    <string name="cexd_returned_amount">Returned Amount:</string>
    <string name="cexd_card">Card:</string>
</resources>