<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2019 CEX.​IO Ltd (UK)
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.cexdirect.lib.error.ErrorActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            style="@style/Direct.ErrorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cexd_refund_title" />

        <TextView
            style="@style/Direct.ErrorReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/cexd_refund_reason" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:background="@color/cexd_finish_bg"
                android:elevation="8dp"
                android:orientation="vertical"
                android:outlineProvider="bounds"
                android:paddingLeft="16dp"
                android:paddingTop="72dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp">

                <TextView
                    style="@style/Direct.Receipt.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cexd_refund_details" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Direct.Receipt.Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cexd_returned_amount" />

                    <TextView
                        style="@style/Direct.Receipt.Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@{@string/cexd_amount_template(model.orderAmounts.selectedFiatAmount, model.orderAmounts.selectedFiatCurrency)}"
                        tools:text="1000 EUR" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Direct.Receipt.Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cexd_card" />

                    <TextView
                        style="@style/Direct.Receipt.Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@{@string/cexd_card_bin(model.cardBin)}"
                        tools:text="1234" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="top|center_horizontal"
                android:contentDescription="@string/cexd_currency_icon"
                android:elevation="10dp"
                android:scaleType="fitXY"
                app:coinIcon="@{model.orderAmounts.selectedFiatCurrency}"
                tools:srcCompat="@drawable/ic_btc" />

        </FrameLayout>

        <TextView
            style="@style/Direct.ErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:text="@string/cexd_refund_desc" />

        <Button
            style="@style/Direct.MainButton.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:elevation="8dp"
            android:onClick="@{() -> model.tryAgain()}"
            android:text="@string/cexd_ok" />

    </LinearLayout>

</layout>
