<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 CEX.​IO Ltd (UK)
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
                name="model"
                type="com.cexdirect.lib.verification.identity.CvvInfoDialogViewModel"/>
    </data>

    <LinearLayout
            style="@style/Direct.Picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                style="@style/Direct.Textfield.M2.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cexd_cvv"/>

        <TextView
                style="@style/Direct.Textfield.M2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/cexd_cvv_desc"/>

        <Button
                style="@style/Direct.MainButton.Big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> model.close()}"
                android:outlineProvider="background"
                android:text="@string/cexd_ok"/>
    </LinearLayout>
</layout>
