<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 CEX.​IO Ltd (UK)
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="model"
                type="com.cexdirect.lib.verification.confirmation.ChangeEmailDialogViewModel"/>

        <import type="com.cexdirect.lib._util.EmailStatus"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">

        <TextView
                style="@style/Direct.Textfield.L"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cexd_edit_your_email"/>

        <LinearLayout
                style="@style/Direct.InputLayout"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:isActivated="@{model.emailStatus == EmailStatus.INVALID}">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_email"
                    android:contentDescription="@string/cexd_email_icon"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/cexd_email_address"
                    app:hintTextAppearance="@style/Direct.TextHint">

                <com.google.android.material.textfield.TextInputEditText
                        style="@style/Direct.Input2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={model.email}"
                        tools:text="d.trump@whouse.gov"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

            <Button
                    style="@style/Direct.SecondaryButton.Big"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> model.cancel()}"
                    android:text="@string/cexd_cancel"/>

            <Button
                    style="@style/Direct.MainButton.Big"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:enabled="@{model.emailStatus == EmailStatus.VALID}"
                    android:onClick="@{() -> model.saveEmail()}"
                    android:text="@string/cexd_save"/>

        </LinearLayout>

    </LinearLayout>

</layout>
